--- a/duckdns.conf
+++ b/duckdns.conf
@@ -2,8 +2,10 @@ domain=yourdomain
 token=yourtoken
 interval=600
 
-# IPv6 detection endpoint (required)
+# IPv6 detection endpoint
 ipv6_endpoint=https://api6.ipify.org
 
-# Optional IPv4 detection endpoint (disabled by default)
+# Optional IPv4 detection endpoint
 # ipv4_endpoint=https://api.ipify.org
+
+# At least one IPv6 or IPv4 should be specified.  If you are behind CGNAT, only IPv6 will generally work.  Only use IPv4 if you have a static IPv4 address (not common)
